# CMakePlayground

./: .gitignore  CMakeLists.txt  main.cpp
dynamic/: DynamicDemo.cpp  DynamicDemo.h
static/: StaticDemo.cpp  StaticDemo.h
